videomixer: Maintain z-order when new pad are added

https://bugzilla.gnome.org/show_bug.cgi?id=701109